--- a/yobba/frontend/templates/frontend/index.html
+++ b/yobba/frontend/templates/frontend/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://bootswatch.com/4/lux/bootstrap.min.css"
+      href="https://bootswatch.com/4/minty/bootstrap.min.css"
     />
     <title>yobba</title>
   </head>
