--- a/yobba/frontend/templates/frontend/index.html
+++ b/yobba/frontend/templates/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/static/frontend/styles.css" />
     <link
       rel="stylesheet"
       href="https://bootswatch.com/4/minty/bootstrap.min.css"
