--- a/yobba/frontend/static/frontend/styles.css
+++ b/yobba/frontend/static/frontend/styles.css
@@ -7,11 +7,30 @@
   border-radius: 3px;
   width: 300px;
   padding: 8px;
+  margin-top: 15px;
   margin-right: 8px;
+  height: 100%;
 }
 
 .board-lists-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.open-form-button-group {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 3px;
+  height: 60px;
+  width: 272px;
+  padding-left: 10px;
+  margin-top: 15px;
+}
+
+.form-button-group {
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
 }
